# Endpoint-Logger

./: Cargo.toml  LICENSE  README.md  endpoint-logger.toml  endpoint_logger.toml
endpoint_logger/: .gitignore  Cargo.toml
endpoint_logger/src/: config.rs  lib.rs  main.rs
endpoint_logger/tests/: health_check.rs
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs
src/models/: proxy.rs
src/proxy/: mod.rs
src/utils/: errors.rs  logger.rs  mod.rs
