[package]
name = "endpoint_logger"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Ioan A."]
description = "A privacy-first HTTP request logger that acts as a reverse proxy"
repository = "https://github.com/johny1918/endpoint-logger"
keywords = ["http", "proxy", "logger", "debugging", "monitoring"]
categories = ["development-tools", "network-programming"]

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "endpoint_logger"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"
tracing = "0.1.44"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["fmt", "json"] }
url = "2.5.8"

[dev-dependencies]
reqwest = "0.13.1"
